<resources>
    <string name="app_name">N-notepad</string>
    <!-- activity_main.xml -->
    <string name="add_memo">新規作成</string>
    <!-- activity_show.xml -->
    <string name="show_title">タイトル</string>
    <string name="show_memo">内容</string>
    <string name="edit_memo">編集</string>
    <string name="delete_memo">削除</string>
    <string name="back_list">一覧へ戻る</string>
    <!-- activity_edit.xml -->
    <string name="save">保存</string>
    <string name="cancel">キャンセル</string>
</resources>
